--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,21 +12,40 @@ a, a:hover, a:visited{
 .clickable{
   cursor: pointer;
 }
-.btn-positive, .btn-positive:hover{
-  background-color: green;
-  color: #f8ecf2;
-  font-size: 12pt;
+.btn{
   padding: 0.5em 1em;
   font-weight: bold;
   width: fit-content;
 }
-.message-title a{
+.btn-positive, .btn-positive:hover, .btn-positive:visited, .btn-positive:active{
+  background-color: green;
+  color: #f8ecf2;
+  font-size: 12pt;
+}
+.btn-neutral, .btn-neutral:hover, .btn-neutral:visited, .btn-neutral:active{
+  background-color: #f8ecf2;
+  color: #4d1933;
+  border: 1px solid #4d1933;
+  font-size: 12pt;
+}
+.btn-negative, .btn-negative:hover, .btn-negative:visited, .btn-negative:active{
+  background-color: #cc0000;
+  color: #f8ecf2;
+  font-size: 12pt;
+}
+.message-title a, .message-title{
   color: #4d1933;
   font-weight: 600;
 }
 .message-desc{
   padding-left: 2em;
   border-left: 1px solid #4d1933;
+}
+.editable-message .message-item-title{
+  font-weight: bold;
+}
+.editable-message textarea.message-item-desc{
+  height: 10em;
 }
 /*Icons*/
 .fa-envelope-open-text{
@@ -81,6 +100,21 @@ a, a:hover, a:visited{
   font-weight: 500;
   font-size: 13pt;
 }
+/*Modal*/
+.modal-header{
+  border: none;
+
+}
+.modal-title{
+  color: #4d1933;
+}
+.modal-footer{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  border: none;
+}
+
 /*Home*/
 .welcome-text{
   color:#4d1933;
@@ -103,6 +137,19 @@ a, a:hover, a:visited{
   color: green;
   text-decoration: underline;
 }
+.auth-section{
+  align-items: center;
+}
+.auth-section .avatar-main {
+  width: 15em;
+  height: 12em;
+  margin-bottom: 1em;
+  margin-top: 1em;
+}
+.welcome-username{
+  font-size: 2em;
+  font-weight: bold;
+}
 /*Dashboard */
 .message-list-item{
   height: 10vh;
@@ -117,7 +164,41 @@ a, a:hover, a:visited{
   padding-left: 2em;
   border-left: 1px solid #4d1933;
 }
-
+/*Message Layout*/
+.auth-message-btns{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 3em 0em 1em;
+}
+.auth-message-btns .btn{
+  padding: 0.25em 1em;
+}
+.reply-section{
+  margin: 2em 0em 0em 2em;
+}
+.reply-form{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+.reply-form .btn{
+  margin-left: 92%;
+}
+.reply-item{
+  margin-top: 1em;
+  padding-left: 0.25em;
+  background-color: #f2f2f2;
+}
+.reply-username{
+  font-weight: bold;
+}
+.reply-text-section{
+  padding-left: 2em;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
 /*Footer*/
 .footer{
   border-top: 1px solid lightpink;
